--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ body {
 /* END OF INFO */
 /* QUIZ */
 .title header {
+  position: relative;
   height: 70px;
   padding: 5px 15px;
   box-shadow: 0 3px 3px 1px rgba(0, 0, 0, 0.2);
@@ -110,6 +111,14 @@ body {
 
 .time {
   color: #fff;
+}
+
+.timer-line {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: sandybrown;
+  height: 2px;
 }
 
 .quiz {
@@ -197,11 +206,6 @@ footer span {
 
 .scores h3 {
   margin-bottom: 15px;
-}
-
-.quit {
-  border: 1px solid salmon;
-  margin-left: 15px;
 }
 
 .results-btns {
